tests/sksl/errors/ArrayTooManyDimensionsInFuncDecl.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
void func(float x[2][2]) {}
          ^^^^^^^^^^^^^
1 error
